Refactor REST API Controllers and Exception Handling
- Updated SystemConfigController, SystemController, UserController, and WorkflowRunController to use specific Spring annotations for better clarity and organization.
- Introduced AgentExceptionHandler and FileServerExceptionHandler for centralized exception handling in the REST API.
- Added AuthzTokenFilter to manage authorization tokens in requests.
- Improved logging practices by using a consistent Logger instance across classes.
- Updated pom.xml to manage dependencies and plugins, including Spring Boot and gRPC versions.